fix: apply Guardian compliance fixes (7 issues addressed)